# Local-LLM-Benchamark

./: package-lock.json
local-llm-benchmark-suite/: .gitignore  PROJECT_STATUS.md  README.md  index.html  package-lock.json  package.json  vite.config.js
local-llm-benchmark-suite/src/: App.jsx  main.css
local-llm-benchmark-suite/src-tauri/: Cargo.toml  tauri.conf.json
local-llm-benchmark-suite/src-tauri/src/: main.rs
local-llm-benchmark-suite/src/agent/: AgentRuntime.js  BenchmarkManager.js  MemoryManager.js
local-llm-benchmark-suite/src/components/: AgenticPanel.jsx  ChatPanel.jsx  MCPPanel.jsx  RAGPanel.jsx  ToolsPanel.jsx
local-llm-benchmark-suite/src/context/: MemoryContext.jsx  ToolContext.jsx
local-llm-benchmark-suite/src/panels/: BenchmarkDashboard.jsx  LogsPanel.jsx  RAGPanel.jsx  ResourceMonitor.jsx
local-llm-benchmark-suite/src/utils/: logger.js  metrics.js
