[package]
name = "local-llm-benchmark-suite"
version = "0.1.0"
description = "A Local LLM Benchmark Suite for testing and monitoring LLMs"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
dirs = "5.0"
